# pcconmon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  deps.lst
.github/workflows/: build.yml  ccpp.yml
src/agent/source/: agent.cpp  pcConMonAgent.cpp
src/lib/dataStructureLib/include/: coreDataStructures.hpp
src/lib/dataStructureLib/source/: coreDataStructures.cpp
src/lib/include/: commonInclude.hpp
src/lib/providerLib/: CMakeLists.txt
src/lib/providerLib/include/: commonInclude.hpp  coreProviderClasses.hpp  hardwareProviderClasses.hpp  winCmdExec.hpp
src/lib/structureLib/: CMakeLists.txt
src/lib/structureLib/include/: auxClasses.hpp  commonInclude.hpp  coreClasses.hpp  coreDataClasses.hpp  hardwareClasses.hpp  hardwareDataClasses.hpp
src/sandbox/source/: chat.cpp  main.cpp
